working on accounts component

--- a/package.json
+++ b/package.json
@@ -34,5 +34,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "README coming soon!",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Cragzu/cmdf-2021.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Cragzu/cmdf-2021/issues"
+  },
+  "homepage": "https://github.com/Cragzu/cmdf-2021#readme"
 }
